Fixing errors in advantages list (Issue #6).

--- a/public/neu.html
+++ b/public/neu.html
@@ -45,10 +45,10 @@
           </colgroup>
           <tbody>
             <tr>
-              <td> 
+              <td>
                 <label for="char_name">Name:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Person[Name]" id="char_name" type="text" placeholder="Name" class="fullSize">
               </td>
             </tr>
@@ -61,10 +61,10 @@
               </td>
             </tr>
             <tr>
-              <td> 
+              <td>
                 <label for="char_gender">Geschlecht:</label>
               </td>
-              <td> 
+              <td>
                 <select name="Person[Geschlecht]" id="char_gender">
                   <option>männlich</option>
                   <option>weiblich</option>
@@ -72,26 +72,26 @@
               </td>
             </tr>
             <tr>
-              <td> 
+              <td>
                 <label for="char_so">Sozialstatus:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Person[SO]" id="char_so" type="number" min="0" max="20" step="1" placeholder="SO">
               </td>
             </tr>
             <tr>
-              <td> 
+              <td>
                 <label for="char_height">Größe:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Person[Größe]" id="char_height" type="number" min="25" max="250" step="1" placeholder="cm">&nbsp; Halbfinger
               </td>
             </tr>
             <tr>
-              <td> 
+              <td>
                 <label for="char_weight">Gewicht:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Person[Gewicht]" id="char_weight" type="number" min="20" max="300" step="1" placeholder="kg">&nbsp; Stein
               </td>
             </tr>
@@ -201,10 +201,10 @@
           </colgroup>
           <tbody>
             <tr>
-              <td> 
+              <td>
                 <label for="rkp0" id="rkp0lab">Rasse:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Generierung[Rasse][name]" id="rkp0" type="text" placeholder="Rasse" class="fullSize">
               </td>
               <td>
@@ -212,10 +212,10 @@
               </td>
             </tr>
             <tr>
-              <td> 
+              <td>
                 <label for="rkp1" id="rkp1lab">Kultur:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Generierung[Kultur][name]" id="rkp1" type="text" placeholder="Kultur" class="fullSize">
               </td>
               <td>
@@ -223,10 +223,10 @@
               </td>
             </tr>
             <tr>
-              <td> 
+              <td>
                 <label for="rkp2" id="rkp2lab">Profession:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Generierung[Profession][name]" id="rkp2" type="text" placeholder="Profession" class="fullSize">
               </td>
               <td>
@@ -234,10 +234,10 @@
               </td>
             </tr>
             <tr>
-              <td> 
+              <td>
                 <label for="rkp3" id="rkp3lab">BgB:</label>
               </td>
-              <td> 
+              <td>
                 <input name="Generierung[BgB][name]" id="rkp3" type="text" placeholder="BgB" class="fullSize">
               </td>
               <td>
@@ -274,97 +274,97 @@
           <tbody>
             <tr>
               <td>Mut</td>
-              <td> 
+              <td>
                 <input name="Attribute[MU][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[MU][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[MU][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
             <tr>
               <td>Klugheit</td>
-              <td> 
+              <td>
                 <input name="Attribute[KL][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[KL][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[KL][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
             <tr>
               <td>Intuition</td>
-              <td> 
+              <td>
                 <input name="Attribute[IN][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[IN][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[IN][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
             <tr>
               <td>Charisma</td>
-              <td> 
+              <td>
                 <input name="Attribute[CH][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[CH][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[CH][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
             <tr>
               <td>Fingerfertigkeit</td>
-              <td> 
+              <td>
                 <input name="Attribute[FF][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[FF][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[FF][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
             <tr>
               <td>Gewandheit</td>
-              <td> 
+              <td>
                 <input name="Attribute[GE][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[GE][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[GE][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
             <tr>
               <td>Konstitution</td>
-              <td> 
+              <td>
                 <input name="Attribute[KO][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[KO][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[KO][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
             <tr>
               <td>Körperkraft</td>
-              <td> 
+              <td>
                 <input name="Attribute[KK][mod]" type="number" min="-10" max="10" step="1" value="0">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[KK][start]" type="number" min="0" step="1" value="8">
               </td>
-              <td> 
+              <td>
                 <input name="Attribute[KK][wert]" type="number" min="0" step="1" value="8">
               </td>
             </tr>
@@ -387,7 +387,7 @@
           <tbody>
             <tr>
               <td>Lebensenergie</td>
-              <td> 
+              <td>
                 <input name="modifikatoren[LeP][start]" type="number" min="0" step="1" value="10">
               </td>
               <td>
@@ -399,7 +399,7 @@
             </tr>
             <tr>
               <td>Ausdauer</td>
-              <td> 
+              <td>
                 <input name="modifikatoren[AuP][start]" type="number" min="0" step="1" value="10">
               </td>
               <td>
@@ -411,7 +411,7 @@
             </tr>
             <tr>
               <td id="asp" title="Zum (De-)Aktivieren klicken">Astralenergie</td>
-              <td> 
+              <td>
                 <input name="modifikatoren[AsP][start]" type="number" step="1">
               </td>
               <td>
@@ -423,7 +423,7 @@
             </tr>
             <tr>
               <td id="kap" title="Zum (De-)Aktivieren klicken">Karmaenergie</td>
-              <td> 
+              <td>
                 <input name="modifikatoren[KaP][start]" type="number" min="0" step="1">
               </td>
               <td>
@@ -433,7 +433,7 @@
             </tr>
             <tr>
               <td>Magieresistenz</td>
-              <td> 
+              <td>
                 <input name="modifikatoren[MR][start]" type="number" min="-10" max="10" step="1" value="-4">
               </td>
               <td>
@@ -841,7 +841,7 @@
                       <label for="vorteil_46_3">Intuition</label>
                       <input type="number" min="1" step="1">
                     </li>
-                    <li> 
+                    <li>
                       <input type="checkbox" value="CH" id="vorteil_46_4" class="stufe">
                       <label for="vorteil_46_4">Charisma</label>
                       <input type="number" min="1" step="1">
@@ -977,22 +977,6 @@
                   <input name="Vorteile" type="checkbox" value="Kräfteschub" id="vorteil_59" class="sammeln-eins">
                   <label for="vorteil_59">Kräfteschub</label>
                   <ul>
-                    <li>
-                      <input type="checkbox" value="MU" id="vorteil_59_1">
-                      <label for="vorteil_59_1">Mut</label>
-                    </li>
-                    <li>
-                      <input type="checkbox" value="KL" id="vorteil_59_2">
-                      <label for="vorteil_59_2">Klugheit</label>
-                    </li>
-                    <li>
-                      <input type="checkbox" value="IN" id="vorteil_59_3">
-                      <label for="vorteil_59_3">Intuition</label>
-                    </li>
-                    <li>
-                      <input type="checkbox" value="CH" id="vorteil_59_4">
-                      <label for="vorteil_59_4">Charisma</label>
-                    </li>
                     <li>
                       <input type="checkbox" value="FF" id="vorteil_59_5">
                       <label for="vorteil_59_5">Fingerfertigkeit</label>
@@ -1159,6 +1143,18 @@
                 <li>
                   <input name="Vorteile" type="checkbox" value="Soziale Anpassungsfähigkeit" id="pc_56"/>
                   <label for="pc_56">Soziale Anpassungsfähigkeit</label>
+                </li>
+                <li>
+                  <input name="Vorteile" type="checkbox" value="Talentschub" id="vorteil_95" class="auswahl_text">
+                  <label for="vorteil_95">Talentschub</label>
+                  <div class="fl-rechts">
+                    <input type="text"><br>
+                    <input type="text"><br>
+                    <input type="text"><br>
+                    <input type="text"><br>
+                    <input type="text">
+                  </div>
+                  <div class="fl-clear"></div>
                 </li>
                 <li>
                   <input name="Vorteile" type="checkbox" value="Tierempathie" id="vorteil_76" class="sammeln-nowrap">
@@ -1622,7 +1618,7 @@
                       <input type="checkbox" value="IN" id="nachteil_64_3">
                       <label for="nachteil_64_3">Intuition</label>
                     </li>
-                    <li> 
+                    <li>
                       <input type="checkbox" value="CH" id="nachteil_64_4">
                       <label for="nachteil_64_4">Charisma</label>
                     </li>
@@ -1742,17 +1738,17 @@
                   <input name="Nachteile" type="checkbox" value="Schlafwandler" id="pc_138"/>
                   <label for="pc_138">Schlafwandler</label>
                 </li>
-                <li> 
+                <li>
                   <input name="Nachteile" type="checkbox" id="nachteil_85" class="zusatz stufe">
                   <input type="text" placeholder="Schlechte Eigenschaft" size="21">
                   <input type="number" min="1" max="20" step="1">
                 </li>
-                <li> 
+                <li>
                   <input name="Nachteile" type="checkbox" id="nachteil_86" class="zusatz stufe">
                   <input type="text" placeholder="Schlechte Eigenschaft" size="21">
                   <input type="number" min="1" max="20" step="1">
                 </li>
-                <li> 
+                <li>
                   <input name="Nachteile" type="checkbox" id="nachteil_87" class="zusatz stufe">
                   <input type="text" placeholder="Schlechte Eigenschaft" size="21">
                   <input type="number" min="1" max="20" step="1">
